--- a/SchooleManagment/pom.xml
+++ b/SchooleManagment/pom.xml
@@ -57,6 +57,13 @@
     <scope>provided</scope>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf -->
+<dependency>
+    <groupId>org.thymeleaf</groupId>
+    <artifactId>thymeleaf</artifactId>
+    <version>3.1.0.RELEASE</version>
+</dependency>
+
 		
 	</dependencies>
 
